samples/_failures_safe/1761593638_1863c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f81e3f3.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_5f81e3f3.c:159:14: error: ‘TO’ undeclared (first use in this function)
  159 |         case TO
      |              ^~
./samples/SAFE/__tmp_5f81e3f3.c:159:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5f81e3f3.c:159:9: error: expected ‘:’ or ‘...’ at end of input
  159 |         case TO
      |         ^~~~
./samples/SAFE/__tmp_5f81e3f3.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f81e3f3.c:159:9: error: expected declaration or statement at end of input
